[tool.poetry]
name = "td3"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.11.0"
free-mujoco-py = "^2.1.6"
gym = "^0.23.1"
wandb = "^0.12.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
